<resources>
    <string name="app_name">Personal Health Tracker</string>
    <string name="login">Login</string>
    <string name="pleas_enter_your_password">Pleas Enter Your Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="epona_application_logo">Epona Application Logo</string>
    <string name="pleas_enter_your_email">Pleas Enter Your Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="title_activity_line_chart">LineChartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="activity_added">Healthy activity is saved successfully</string>
    <string name="error">Error:  %1$s</string>

    <string name="error_field_required">Error! Field is Required</string>
    <string name="error_accept_terms">Accept Terms and Conditions</string>
    <string name="error_authentication_failed">Authentication Failed</string>

    <string name="timeline_account">Account</string>
    <string name="timeline_personal">Personal</string>
    <string name="timeline_additional">Additional</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="tell_us_about_yourself">Tell us About Yourself</string>
    <string name="username">Username</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="cancel">Cancel</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="click_the_chart_elements_to_see_the_detail">Click the chart elements to see the detail</string>
    <string name="activities">Home</string>
    <string name="add">Add</string>
    <string name="depth_format">%1$d m</string>
    <string name="pressure_format">Pressure: %.2f atm</string>
    <string name="max_depth_format">Max: %1$d m</string>
    <string name="calories_format">%1$d kcal</string>
    <string name="profile">Profile</string>
    <string name="time_past">Time Past</string>
    <string name="total_steps">Total Steps</string>
    <string name="energy_consumption">Energy</string>
    <string name="start">Start</string>
    <string name="outdoor_run">Outdoor Run</string>
    <string name="average_speed">Average Speed</string>
    <string name="finish">Finish</string>
    <string name="stop">Stop</string>
    <string name="diving_statistics">Diving Statistics</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="subscribe_now">Subscribe Now</string>


</resources>