<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginFragment">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:contentDescription="@string/epona_application_logo"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/emailViewHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_logo"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/emailViewInLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/emailViewHead"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/textviewbackground"
            android:hint="Please enter your email"
            android:paddingStart="14dp"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/passwordViewHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailViewInLogin"
            android:layout_marginStart="45dp"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/passwordViewHead"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/textviewbackground"
            android:hint="Please enter your password"
            android:paddingStart="14dp"
            tools:ignore="RtlSymmetry" />


        <Button
            android:id="@+id/login_button"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:background="@drawable/loginbuttonbackground"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/haveAccount"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="?android:attr/selectableItemBackground"
                android:hint="@string/don_t_you_have_an_account"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/signuplogincolor"
                android:textSize="17sp" />

        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>